--- a/Lab13StudentEnrollment/Views/Courses/Index.cshtml
+++ b/Lab13StudentEnrollment/Views/Courses/Index.cshtml
@@ -1,1 +1,21 @@
-﻿Courses page
+﻿@model List<Lab13StudentEnrollment.Models.Course>
+courses page
+<table class="view-courses">
+    <tr>
+        <th>Course ID</th>
+        <th>Description</th>
+    </tr>
+
+    @foreach (var course in Model)
+    {
+        <tr>
+            <td>@course.CourseID</td>
+            <td>@course.Description</td>
+            <td><a asp-controller="Courses" asp-action="Details" asp-route-id="@course.ID">View</a></td>
+        </tr>
+    }
+</table>
+
+<form method="get" asp-controller="Courses" asp-action="Create">
+    <button type="submit">Add new course</button>
+</form>
