--- a/Lab13StudentEnrollment/Views/Shared/_Layout.cshtml
+++ b/Lab13StudentEnrollment/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link href="~/styles/style.css" rel="stylesheet" />
     </environment>
 </head>
 
