--- a/Lab13StudentEnrollment/Views/Students/Index.cshtml
+++ b/Lab13StudentEnrollment/Views/Students/Index.cshtml
@@ -1,17 +1,26 @@
 ﻿@model List<Lab13StudentEnrollment.Models.Student>
-student page
 
-<form asp-controller="Students" asp-action="Index" method="get">
+<h2>Students Page</h2>
 
-    Student: <input type="text" name="search">
-    <input type="submit" value="Filter" />
-</form>
+<div class="wrapper">
+    <form asp-controller="Students" asp-action="Index" method="get">
+
+        Student: <input type="text" name="search">
+        <input type="submit" value="Filter" />
+    </form>
+</div>
+<div class="wrapper create">
+    <form method="get" asp-controller="Students" asp-action="Create">
+        <button type="submit">Create new student</button>
+    </form>
+</div>
 
 <table class="view-students">
     <tr>
         <th>Name</th>
         <th>Age</th>
         <th>Course ID</th>
+        <th></th>
     </tr>
 
     @foreach (var student in Model)
@@ -24,7 +33,3 @@ student page
         </tr>
     }
 </table>
-
-<form method="get" asp-controller="Students" asp-action="Create">
-    <button type="submit">Create new student</button>
-</form>
