--- a/Lab13StudentEnrollment/Views/Courses/Details.cshtml
+++ b/Lab13StudentEnrollment/Views/Courses/Details.cshtml
@@ -1,19 +1,22 @@
 ﻿@model Lab13StudentEnrollment.Models.CourseDetailsViewModel
 
+<h2>
+    @Model.Course.CourseID Course Profile
+</h2>
+
 <form asp-action="Update" asp-route-id="@Model.Course.ID">
     <label asp-for="Course.CourseID">Course ID</label>
-    <input asp-for="Course.CourseID" />
+    <input asp-for="Course.CourseID" style="margin-left:11px;" />
     <br />
 
     <label asp-for="Course.Description">Description</label>
-    <input asp-for="Course.Description" />
+    <input asp-for="Course.Description" style="width:22%;" />
     <br />
 
     <button type="submit">Update Course</button>
+    <button type="submit" asp-action="Delete" asp-route-id="@Model.Course.ID">Delete Course</button>
 </form>
-<form asp-action="Delete" asp-route-id="@Model.Course.ID">
-    <button type="submit">Delete Course</button>
-</form>
+
 <h2>Current Students Enrolled</h2>
 @foreach (var student in Model.Students)
 {
