Finished basic styling

--- a/Lab13StudentEnrollment/Views/Home/Index.cshtml
+++ b/Lab13StudentEnrollment/Views/Home/Index.cshtml
@@ -1,1 +1,28 @@
-﻿Woo page one
+﻿<div class="col-lg-3">
+    <h2>School Updates</h2>
+
+    <p>Currently, there is an issue of theft around campus.
+    Please be sure to inform teachers of the appropriate procedures
+    to pass on to the students for future reports</p>
+</div>
+<div class="col-lg-5">
+    <h2>Available Dates for events</h2>
+    <ul>
+        <li>April 22nd, 2018</li>
+        <li>June 2nd, 2018</li>
+        <li>July 13th, 2018</li>
+        <li>August 24nth, 2018</li>
+        <li>October 22nd, 2018</li>
+    </ul>
+</div>
+<div class="col-lg-4">
+    <h2>Notes</h2>
+    <ul>
+        <li>Be sure to include emails</li>
+        <li>Adjust payroll</li>
+        <li>Contact graphic designer</li>
+        <li>Reschedule meeting</li>
+        <li>Meeting on june 30th</li>
+        <li>Plumber</li>
+    </ul>
+</div>
