--- a/Lab13StudentEnrollment/Views/Courses/Create.cshtml
+++ b/Lab13StudentEnrollment/Views/Courses/Create.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Lab13StudentEnrollment.Models.Course
 
-<form method="post" asp-controller="Courses" form-action="Create">
+<form method="post" asp-controller="Courses" form-action="Create" style="margin-top: 10px;">
 
     <label asp-for="CourseID">Course ID</label>
-    <input asp-for="CourseID" />
+    <input asp-for="CourseID" style="margin-left:11px;"/>
     <br />
 
     <label asp-for="Description">Description</label>
