--- a/Lab13StudentEnrollment/Views/Shared/_Layout.cshtml
+++ b/Lab13StudentEnrollment/Views/Shared/_Layout.cshtml
@@ -5,12 +5,16 @@
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link href="~/styles/style.css" rel="stylesheet" />
     </environment>
+    <environment exclude="Development">
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link href="~/styles/style.css" rel="stylesheet" />
+    </environment>
 </head>
 
 <body>
-    <nav class="nav navbar-fixed-top">
+    <nav>
         <div class="container">
-            <ul class="nav navbar-nav navbar-fixed-top ">
+            <ul class="nav navbar-nav navbar-fixed-top">
                 <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                 <li><a asp-area="" asp-controller="Students" asp-action="Index">Students</a></li>
                 <li><a asp-area="" asp-controller="Courses" asp-action="Index">Courses</a></li>
@@ -19,7 +23,10 @@
     </nav>
 
 
-    <div class="container" style="margin-top:5%">
+    <div class="container" style="margin-top:4%">
+        <div>
+            <img src="~/assets/university_front.jpg" alt="Alternate Text" style="width:100%; height: 400px;"/>
+        </div>
         @RenderBody()
         <hr />
         <footer><p>&copy; @DateTime.Now.Year - Eric Singleton</p></footer>
